Fix spacing for button

--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ body {
   text-decoration: none;
   font-weight: bold;
   font-size: 1rem;
+  margin-bottom: 5rem;;
 }
 
 @media (max-width: 768px) {
@@ -150,6 +151,7 @@ body {
   font-size: 1.1rem;
   margin-bottom: 1rem;
   color: #444;
+  margin-bottom: 2rem;
 }
 
 .scroll-item.reverse {
